@@ -478,6 +478,24 @@ name|solrj
 operator|.
 name|response
 operator|.
+name|CollectionAdminResponse
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|response
+operator|.
 name|QueryResponse
 import|;
 end_import
@@ -4649,7 +4667,7 @@ return|;
 block|}
 DECL|method|createCollection
 specifier|protected
-name|void
+name|CollectionAdminResponse
 name|createCollection
 parameter_list|(
 name|Map
@@ -4686,6 +4704,7 @@ name|SolrServerException
 throws|,
 name|IOException
 block|{
+comment|// TODO: Use CollectionAdminRequest for this test
 name|ModifiableSolrParams
 name|params
 init|=
@@ -4844,6 +4863,13 @@ argument_list|(
 literal|"/admin/collections"
 argument_list|)
 expr_stmt|;
+name|CollectionAdminResponse
+name|res
+init|=
+operator|new
+name|CollectionAdminResponse
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
 name|client
@@ -4910,11 +4936,16 @@ argument_list|,
 name|baseUrl
 argument_list|)
 decl_stmt|;
+name|res
+operator|.
+name|setResponse
+argument_list|(
 name|aClient
 operator|.
 name|request
 argument_list|(
 name|request
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|aClient
@@ -4925,14 +4956,22 @@ expr_stmt|;
 block|}
 else|else
 block|{
+name|res
+operator|.
+name|setResponse
+argument_list|(
 name|client
 operator|.
 name|request
 argument_list|(
 name|request
 argument_list|)
+argument_list|)
 expr_stmt|;
 block|}
+return|return
+name|res
+return|;
 block|}
 DECL|method|getLeaderUrlFromZk
 specifier|protected
