@@ -454,6 +454,24 @@ name|solrj
 operator|.
 name|response
 operator|.
+name|CollectionAdminResponse
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|response
+operator|.
 name|QueryResponse
 import|;
 end_import
@@ -9605,7 +9623,7 @@ expr_stmt|;
 block|}
 DECL|method|createCollection
 specifier|protected
-name|void
+name|CollectionAdminResponse
 name|createCollection
 parameter_list|(
 name|String
@@ -9615,7 +9633,7 @@ name|int
 name|numShards
 parameter_list|,
 name|int
-name|numReplicas
+name|replicationFactor
 parameter_list|,
 name|int
 name|maxShardsPerNode
@@ -9625,6 +9643,7 @@ name|SolrServerException
 throws|,
 name|IOException
 block|{
+return|return
 name|createCollection
 argument_list|(
 literal|null
@@ -9633,7 +9652,7 @@ name|collectionName
 argument_list|,
 name|numShards
 argument_list|,
-name|numReplicas
+name|replicationFactor
 argument_list|,
 name|maxShardsPerNode
 argument_list|,
@@ -9641,11 +9660,11 @@ literal|null
 argument_list|,
 literal|null
 argument_list|)
-expr_stmt|;
+return|;
 block|}
 DECL|method|createCollection
 specifier|protected
-name|void
+name|CollectionAdminResponse
 name|createCollection
 parameter_list|(
 name|Map
@@ -9678,6 +9697,7 @@ name|SolrServerException
 throws|,
 name|IOException
 block|{
+return|return
 name|createCollection
 argument_list|(
 name|collectionInfos
@@ -9690,11 +9710,12 @@ name|client
 argument_list|,
 literal|null
 argument_list|)
-expr_stmt|;
+return|;
 block|}
+comment|// TODO: Use CollectionAdminRequest#createCollection() instead of a raw request
 DECL|method|createCollection
 specifier|protected
-name|void
+name|CollectionAdminResponse
 name|createCollection
 parameter_list|(
 name|Map
@@ -9848,7 +9869,7 @@ argument_list|()
 expr_stmt|;
 block|}
 name|Integer
-name|numReplicas
+name|replicationFactor
 init|=
 operator|(
 name|Integer
@@ -9932,7 +9953,7 @@ name|list
 operator|.
 name|add
 argument_list|(
-name|numReplicas
+name|replicationFactor
 argument_list|)
 expr_stmt|;
 if|if
@@ -9977,6 +9998,13 @@ argument_list|(
 literal|"/admin/collections"
 argument_list|)
 expr_stmt|;
+name|CollectionAdminResponse
+name|res
+init|=
+operator|new
+name|CollectionAdminResponse
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
 name|client
@@ -10001,6 +10029,10 @@ name|clientIndex
 argument_list|)
 argument_list|)
 decl_stmt|;
+name|res
+operator|.
+name|setResponse
+argument_list|(
 name|createNewSolrServer
 argument_list|(
 literal|""
@@ -10012,18 +10044,27 @@ name|request
 argument_list|(
 name|request
 argument_list|)
+argument_list|)
 expr_stmt|;
 block|}
 else|else
 block|{
+name|res
+operator|.
+name|setResponse
+argument_list|(
 name|client
 operator|.
 name|request
 argument_list|(
 name|request
 argument_list|)
+argument_list|)
 expr_stmt|;
 block|}
+return|return
+name|res
+return|;
 block|}
 DECL|method|runCollectionAdminCommand
 specifier|protected
@@ -10038,7 +10079,7 @@ empty_stmt|;
 block|}
 DECL|method|createCollection
 specifier|protected
-name|void
+name|CollectionAdminResponse
 name|createCollection
 parameter_list|(
 name|Map
@@ -10059,7 +10100,7 @@ name|int
 name|numShards
 parameter_list|,
 name|int
-name|numReplicas
+name|replicationFactor
 parameter_list|,
 name|int
 name|maxShardsPerNode
@@ -10075,6 +10116,7 @@ name|SolrServerException
 throws|,
 name|IOException
 block|{
+return|return
 name|createCollection
 argument_list|(
 name|collectionInfos
@@ -10091,7 +10133,7 @@ name|numShards
 argument_list|,
 name|REPLICATION_FACTOR
 argument_list|,
-name|numReplicas
+name|replicationFactor
 argument_list|,
 name|CREATE_NODE_SET
 argument_list|,
@@ -10104,11 +10146,11 @@ argument_list|)
 argument_list|,
 name|client
 argument_list|)
-expr_stmt|;
+return|;
 block|}
 DECL|method|createCollection
 specifier|protected
-name|void
+name|CollectionAdminResponse
 name|createCollection
 parameter_list|(
 name|Map
@@ -10129,7 +10171,7 @@ name|int
 name|numShards
 parameter_list|,
 name|int
-name|numReplicas
+name|replicationFactor
 parameter_list|,
 name|int
 name|maxShardsPerNode
@@ -10148,6 +10190,7 @@ name|SolrServerException
 throws|,
 name|IOException
 block|{
+return|return
 name|createCollection
 argument_list|(
 name|collectionInfos
@@ -10164,7 +10207,7 @@ name|numShards
 argument_list|,
 name|REPLICATION_FACTOR
 argument_list|,
-name|numReplicas
+name|replicationFactor
 argument_list|,
 name|CREATE_NODE_SET
 argument_list|,
@@ -10179,7 +10222,7 @@ name|client
 argument_list|,
 name|configName
 argument_list|)
-expr_stmt|;
+return|;
 block|}
 annotation|@
 name|Override
